maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:26: error: ':' expected but ',' found.
def ecrireGauche(x,y):Boolean {
                  ^JediEscaper:56: error: identifier expected but '}' found.
}
^